--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
       </ul>
       <!-- SEARCH-FORM -->
 
+      <!-- GLOBAL-SEACH-FORM -->
+<form class="global-search-form" action="https://echo.htmlacademy.ru" method="get">
+<input class="global-search-form-input" type="search" name="search" placeholder="Поиск" aria-lebal="Поиск" required>
+</form>
+
       <!-- LANG-TOGGLE -->
         <div class="lang-toggle">
           <div class="lang-toggle__change">
