--- a/index.html
+++ b/index.html
@@ -323,7 +323,79 @@
 </div>
  </main>
 
+<!-- SITE-FOOTER -->
+ <footer class="site-footer">
+  <div class="container">
+<div class="site-footer-logo-wrapper">
+  <a class="site-footer-logo" href="index.html">
+    <img class="site-footer-logo-img" src="img/logo-white.svg" alt="N24-logo" width="264" height="28">
+  </a>
+</div>
 
+<div class="site-footer-about-links">
+<div class="site-footer-about">Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.</div>
+<div class="site-footer-links-wrapper">
+<ul class="site-footer-linls">
+  <li class="site-footer-links-item">
+    <a class="site-footer-link"  href="#">Информация о сайте</a>
+  </li>
+  <li class="site-footer-links-item">
+    <a  class="site-footer-link" href="#">Напишите нам</a>
+  </li>
+  <li class="site-footer-links-item">
+    <a  class="site-footer-link" href="#">Реклама</a>
+  </li>
+  <li class="site-footer-links-item">
+    <a  class="site-footer-link" href="#">Прислать новость</a>
+  </li>
+</ul>
+
+<ul class="site-footer-linls">
+  <li class="site-footer-links-item">
+    <a class="site-footer-link"  href="#">Использование материалов</a>
+  </li>
+  <li class="site-footer-links-item">
+    <a  class="site-footer-link" href="#">Темы дня</a>
+  </li>
+  <li class="site-footer-links-item">
+    <a  class="site-footer-link" href="#">Наша команда </a>
+  </li>
+</ul>
+</div>
+</div>
+
+<hr class="site-footer-divider">
+
+<div class="site-footeer-socials">
+  <h2 class="site-footer-socials-heading">Наши социальные сети</h2>
+  <ul class="site-footer-socilas-list">
+    <li class="site-footer-social-item">
+      <a class="site-footer-social-link" href="" target="_blank" >
+        <img class="site-footer-social-icon" src="img/free-icon-facebook-1384053 1.svg" alt="facebook" width="25" height="25" srcset="img/free-icon-facebook-1384053 1.svg">
+      </a>
+    </li>
+
+    <li class="site-footer-social-item">
+      <a class="site-footer-social-link" href="" target="_blank" >
+        <img class="site-footer-social-icon" src="img/free-icon-instagram-2111463 1.svg" alt="instagram" width="25" height="25" srcset="img/free-icon-instagram-2111463 1.svg">
+      </a>
+    </li>
+
+    <li class="site-footer-social-item">
+      <a class="site-footer-social-link" href="" target="_blank" >
+        <img class="site-footer-social-icon" src="img/free-icon-telegram-2111646 1.svg" alt="telegram" width="25" height="25" srcset="img/free-icon-telegram-2111646 1.svg">
+      </a>
+    </li>
+
+    <li class="site-footer-social-item">
+      <a class="site-footer-social-link" href="" target="_blank" >
+        <img class="site-footer-social-icon" src="img/free-icon-youtube-1384060 1.svg" alt="yotube" width="25" height="25" srcset="img/free-icon-youtube-1384060 1.svg">
+      </a>
+    </li>
+  </ul>
+</div>
+  </div>
+ </footer>
 
 
 </body>
