--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <link href="https://fonts.googleapis.com/css?family=Rubik:wght@400;500;700& display=swap" rel="stylesheet">
 
   <!-- styles -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+   <link rel="stylesheet" href="css/styles.m.css">
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
 </head>
 <body>
 
