--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
   <!-- styles -->
    <link rel="stylesheet" href="css/styles.m.css">
-  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+
 
 <!-- SITE-HEADER -->
 <header class="site-header">
@@ -400,5 +402,22 @@
  </footer>
 
 
+ <!-- MODALS -->
+  <section class="modal "  id="notification-modal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <h2 class="visually-hidden">Уведомления</h2>
+          <button class="modal-close js-modal-close" type="button" aria-label="Закрыть модальное окно">
+              <img class="modal-close-icon" src="img/close.svg" alt="" width="24" height="24">
+          </button>
+          <p class="modal-lead">Хотите быть в курсе свежих новостей? <br>Включите уведомления!</p>
+          <div class="modal-actions">
+            <button class="button button-lage button-orage " type="button">Включит</button>
+          </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
